--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.5.0",
     "discord.js": "^14.13.0",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "got": "^13.0.0",
+    "jimp": "^0.22.10",
+    "sharp": "^0.32.5",
+    "tesseract.js": "^4.1.2"
   }
 }
