--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jimp/plugin-threshold": "^0.22.10",
     "axios": "^1.5.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "got": "^13.0.0",
     "jimp": "^0.22.10",
+    "mongodb": "^6.0.0",
+    "mongoose": "^7.5.0",
     "sharp": "^0.32.5",
     "tesseract.js": "^4.1.2"
   }
