--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@jimp/plugin-threshold": "^0.22.10",
     "axios": "^1.5.0",
+    "csv": "^6.3.3",
     "dayjs": "^1.11.9",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
