--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "dayjs": "^1.11.9",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "fast-csv": "^5.0.1",
+    "fs": "0.0.1-security",
     "got": "^13.0.0",
     "jimp": "^0.22.10",
     "mongodb": "^6.0.0",
