--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@jimp/plugin-threshold": "^0.22.10",
     "axios": "^1.5.0",
+    "cors": "^2.8.5",
     "cron": "^3.1.6",
     "csv": "^6.3.3",
     "dayjs": "^1.11.9",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
+    "express": "^4.19.2",
     "fast-csv": "^5.0.1",
     "fs": "0.0.1-security",
     "got": "^13.0.0",
