--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.5.0",
     "node-cron": "^3.0.3",
     "sharp": "^0.32.5",
-    "tesseract.js": "^4.1.2"
+    "tesseract.js": "^4.1.2",
+    "timezone-support": "^3.1.0"
   }
 }
