--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@jimp/plugin-threshold": "^0.22.10",
+    "@napi-rs/canvas": "^0.1.65",
     "axios": "^1.5.0",
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "csv": "^6.3.3",
@@ -28,6 +30,7 @@
     "node-cron": "^3.0.3",
     "sharp": "^0.32.5",
     "tesseract.js": "^4.1.2",
-    "timezone-support": "^3.1.0"
+    "timezone-support": "^3.1.0",
+    "undici": "^7.2.0"
   }
 }
