--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@jimp/plugin-threshold": "^0.22.10",
     "@napi-rs/canvas": "^0.1.65",
     "axios": "^1.5.0",
